# napy

./: README.md  config.toml.example  pyproject.toml
src/napy/: __init__.py  notifications.py  run_in_shell.py
src/python_uvx_example/: __init__.py  config.py  database.py  run_in_shell.py
