[project]
name = "python-uvx-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Morten Hansen", email = "morten@winterop.com" }]
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.12.0",
    "typer>=0.15.4",
]

[project.scripts]
python-uvx-example = "python_uvx_example:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
