[project]
name = "python-uvx-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Morten Hansen", email = "morten@winterop.com" }]
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.12.0",
    "python-daemon>=3.0.1",
    "python-telegram-bot>=21.0",
]

[project.scripts]
python-uvx-example = "python_uvx_example:main_entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
